fixed header-nav spacing

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -2,13 +2,13 @@
 @use "./partials/variables" as *;
 
 //Import font overpass from fountsource
-@import "../../node_modules/@fontsource/overpass/100.css";
-@import "../../node_modules/@fontsource/overpass/200.css";
-@import "../../node_modules/@fontsource/overpass/300.css";
-@import "../../node_modules/@fontsource/overpass/400.css";
-@import "../../node_modules/@fontsource/overpass/500.css";
-@import "../../node_modules/@fontsource/overpass/600.css";
-@import "../../node_modules/@fontsource/overpass/700.css";
+@import "node_modules/@fontsource/overpass/100.css";
+@import "node_modules/@fontsource/overpass/200.css";
+@import "node_modules/@fontsource/overpass/300.css";
+@import "node_modules/@fontsource/overpass/400.css";
+@import "node_modules/@fontsource/overpass/500.css";
+@import "node_modules/@fontsource/overpass/600.css";
+@import "node_modules/@fontsource/overpass/700.css";
 
 // Import Font Awesome
 @import "node_modules/@fortawesome/fontawesome-free/css/all.css";
@@ -27,6 +27,7 @@ img{
 ul{
     list-style: none;
     margin-top: 1rem;
+    padding: 0;
 }
 
 a{
@@ -37,17 +38,18 @@ a{
 
 //buttons
 .ms_btn{
-    padding-top: .3rem;
-    padding-bottom: .3rem;
+    padding-top: .6rem;
+    padding-bottom: .6rem;
     border-radius: 3px;
+    border: none;
     font-weight: 700;
     cursor: pointer;
 }
 
 .ms_btn-small{
-    padding-right: .9rem;
-    padding-left: .9rem;
-    font-size: .7rem;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    font-size: .8rem;
 }
 
 .ms_btn-black{
